[1.7.7-SNAPSHOT]
- Fixed nested defer() tasks immediately completing with parent

[1.7.6]
- Changed RenderLayer#render to public method
- Reduce memory usage of ParentRenderNode by sharing clip cache across instances

[1.7.5]
- Changed ImageRenderNode textureRegion field visibility to protected
- Fixed TypingTextAnimation not resetting after initially skipped

[1.7.4]
- Fixed LabelRenderNode not updating text if updated from its own defer call

[1.7.3]
- Added additional assert in DisperedIntervalEntitySystemTest
- Fixed multiple UiElement defer ordering when durations are same

[1.7.2]
- Significant memory usage improvements across all geometry classes

[1.7.1]
- Added TypingTextAnimation#getCurrentCharacterIndex

[1.7.0]
- [BREAKING] LayoutRuleset is now applied to both horizontal and vertical calculations
- [BREAKING] UI minHeight now includes padding + margin in check
- [BREAKING] TiledCollisionFactory now takes TiledMap as parameter
- [BREAKING] SlideIn/SlideOut animations now take duration as parameter
- [BREAKING] TiledCollisionMerger#isMergable now accepts TiledMap and TileLayer parameters
- (#74) Added TiledMapLoader for loading TiledMap instances via AssetManager
- Added AnimatedImage element to UI library
- Added new FlexDirections; ROW_REVERSE and CENTER
- Added Sprite#getAlpha() method
- Added jacocoTestReport for better code coverage reporting
- Added #equals method to ControllerButton implementations
- Added #equals and #hashcode methods to geometry classes
- TiledCollisionFactory can now return null to specify no collision
- Prototype beans no longer require setters/getters for dependency injection
- Fixed merging concurrency exception during object movement within concurrent QuadTrees
- Fixed incorrect Circle bounding box dimensions
- Fixed dependency injection validating injection too early
- Fixed typing text animation cutting off last character
- Fixed unnecessary Image render node layouts when setting same value for texture path